--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import "components/faq-wrapper";
 @import "components/brand-guidelines-wrapper";
 @import "components/career";
+@import "components/gallery";
 
 
 
