--- a/src/scss/components/_career.scss
+++ b/src/scss/components/_career.scss
@@ -4,12 +4,34 @@
 
     &.top-gap{
         margin-top: -170px;
+
+        @media (max-width: 991px) {
+            margin-top: -110px;
+        }
+
+        @media (max-width: 767px) {
+            overflow-x: hidden;
+        }
     }
 
     .about-content{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 22px;
+
+        @media (max-width: 1200px) {
+            gap: 40px;
+        }
+
+        @media (max-width: 767px) {
+            display: block;
+        }
+
+        h3{
+            @media (max-width: 767px) {
+                margin-bottom: 0;
+            }
+        }
 
         p{
             font-size: 18px;
@@ -18,6 +40,12 @@
             line-height: 35px;
             margin-bottom: 0;
             color: $white;
+
+            @media (max-width: 767px) {
+                font-size: 16px;
+                line-height: 30px;
+                margin-top: 40px;
+            }
         }
     }
 
@@ -30,13 +58,44 @@
             max-width: 1070px;
             margin: 0 auto;
 
+            .step{
+                &:not(:first-child){
+                    @media (max-width:767px) {
+                        margin-top: 50px;
+                    }
+                }
+            }
+
+            @media (max-width:1300px) {
+                gap: 100px 300px;
+            }
+
+            @media (max-width:1000px) {
+                gap: 50px 150px;
+            }
+
+            @media (max-width: 767px) {
+                display: block !important;
+                padding-left: 72px;
+            }
+
             img{
                 margin-bottom: 30px;
                 display: block;
+
+                @media (max-width: 767px) {
+                    margin-bottom: 20px;
+                    width: 60px;
+                    height: 60px;
+                }
             }
 
             h5{
                 margin-bottom: 20px;
+
+                @media (max-width: 767px) {
+                    margin-bottom: 15px;
+                }
             }
 
             p{
@@ -45,6 +104,10 @@
                 line-height: 30px;
                 color: $white;
                 font-weight: 200;
+
+                @media (max-width: 767px) {
+                    font-size: 16px;
+                }
             }
         }
     }
@@ -52,10 +115,24 @@
     .job-list{
         margin: 200px auto;
 
+        
+
+        @media (max-width: 1100px) {
+            margin: 130px auto;
+        }
+
+        @media (max-width: 767px) {
+            margin: 100px auto;
+        }
+
         &__item{
             padding-bottom: 50px;
             border-bottom: 1px solid hsl(0deg 0% 100% / 30%);
             position: relative;
+
+            @media (max-width:767px) {
+                padding-bottom: 105px;
+            }
 
             &:not(:first-child){
                 margin-top: 50px;
@@ -67,11 +144,26 @@
                 position: absolute;
                 right: 0;
                 top: 0;
+
+                @media (max-width:767px) {
+                    bottom: 30px;
+                    left: 0;
+                    display: initial;
+                    top: auto;
+                }
             }
 
             h4{
                 margin-bottom: 30px;
                 padding-right: 80px;
+
+                @media (max-width:767px) {
+                    display: flex;
+                    flex-direction: column-reverse;
+                    align-items: flex-start;
+                    margin-bottom: 25px;
+                    padding-right: 0;
+                }
 
                 span{
                     display: inline-block;
@@ -83,6 +175,19 @@
                     padding: 10px 20px;
                     border: 1px solid $white;
                     border-radius: 50px;
+
+                    @media (max-width: 1100px) {
+                        font-size: 16px;
+                    }
+
+                    @media (max-width:767px) {
+                        margin-bottom: 25px;
+                        margin-left: 0;
+                        display: block;
+                        width: fit-content;
+                        font-size: 15px;
+                        line-height: 20px;
+                    }
                 }
             }
 
@@ -92,6 +197,10 @@
                 font-weight: 300;
                 color: $white;
                 margin-bottom: 0;
+
+                @media (max-width:767px) {
+                    font-size: 18px;
+                }
             }
         }
     }
