--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -755,6 +755,11 @@ footer .footer-contact.version-2 .footer-contact__content .d-flex .col-1, footer
 footer .footer-contact.version-2 .footer-contact__content .d-flex h4 {
   line-height: 55px;
 }
+@media (max-width: 1000px) {
+  footer .footer-contact.version-2 .footer-contact__content .d-flex h4 {
+    line-height: 45px;
+  }
+}
 @media (max-width: 767px) {
   footer .footer-contact.version-2 .footer-contact__content .d-flex h4 {
     margin-bottom: 70px;
@@ -1584,11 +1589,38 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid {
   grid-template-columns: repeat(2, 1fr);
   gap: 70px;
-  min-width: 1200px;
   align-items: center;
+}
+@media (min-width: 1300px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid {
+    min-width: 1200px;
+  }
+}
+@media (max-width: 1300px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid {
+    gap: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid {
+    display: block !important;
+    text-align: center;
+  }
 }
 .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid p {
   margin-top: 0;
+}
+@media (max-width: 1200px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid p {
+    -webkit-line-clamp: 5;
+    text-align: left;
+  }
+}
+@media (max-width: 767px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.grid-layout .d-grid p {
+    text-align: center;
+    margin-top: 30px;
+  }
 }
 .hero-wrapper.version-1.w-full {
   padding-bottom: 250px;
@@ -1629,6 +1661,11 @@ footer .footer-main .footer-links__2 .links {
 .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end {
   padding-bottom: 40px;
   align-items: flex-start;
+}
+@media (max-width: 767px) {
+  .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end {
+    padding-bottom: 25px;
+  }
 }
 .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end h1, .hero-wrapper.version-1 .hero-wrapper__content.justify-content-end p {
   text-align: left;
@@ -3742,10 +3779,35 @@ footer .footer-main .footer-links__2 .links {
 .career-wrapper.top-gap {
   margin-top: -170px;
 }
+@media (max-width: 991px) {
+  .career-wrapper.top-gap {
+    margin-top: -110px;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper.top-gap {
+    overflow-x: hidden;
+  }
+}
 .career-wrapper .about-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 22px;
+}
+@media (max-width: 1200px) {
+  .career-wrapper .about-content {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper .about-content {
+    display: block;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper .about-content h3 {
+    margin-bottom: 0;
+  }
 }
 .career-wrapper .about-content p {
   font-size: 18px;
@@ -3754,6 +3816,13 @@ footer .footer-main .footer-links__2 .links {
   line-height: 35px;
   margin-bottom: 0;
   color: #ffffff;
+}
+@media (max-width: 767px) {
+  .career-wrapper .about-content p {
+    font-size: 16px;
+    line-height: 30px;
+    margin-top: 40px;
+  }
 }
 .career-wrapper .career-process {
   margin-top: 80px;
@@ -3764,12 +3833,45 @@ footer .footer-main .footer-links__2 .links {
   max-width: 1070px;
   margin: 0 auto;
 }
+@media (max-width: 767px) {
+  .career-wrapper .career-process .d-grid .step:not(:first-child) {
+    margin-top: 50px;
+  }
+}
+@media (max-width: 1300px) {
+  .career-wrapper .career-process .d-grid {
+    gap: 100px 300px;
+  }
+}
+@media (max-width: 1000px) {
+  .career-wrapper .career-process .d-grid {
+    gap: 50px 150px;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper .career-process .d-grid {
+    display: block !important;
+    padding-left: 72px;
+  }
+}
 .career-wrapper .career-process .d-grid img {
   margin-bottom: 30px;
   display: block;
 }
+@media (max-width: 767px) {
+  .career-wrapper .career-process .d-grid img {
+    margin-bottom: 20px;
+    width: 60px;
+    height: 60px;
+  }
+}
 .career-wrapper .career-process .d-grid h5 {
   margin-bottom: 20px;
+}
+@media (max-width: 767px) {
+  .career-wrapper .career-process .d-grid h5 {
+    margin-bottom: 15px;
+  }
 }
 .career-wrapper .career-process .d-grid p {
   margin-bottom: 0;
@@ -3778,13 +3880,33 @@ footer .footer-main .footer-links__2 .links {
   color: #ffffff;
   font-weight: 200;
 }
+@media (max-width: 767px) {
+  .career-wrapper .career-process .d-grid p {
+    font-size: 16px;
+  }
+}
 .career-wrapper .job-list {
   margin: 200px auto;
+}
+@media (max-width: 1100px) {
+  .career-wrapper .job-list {
+    margin: 130px auto;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper .job-list {
+    margin: 100px auto;
+  }
 }
 .career-wrapper .job-list__item {
   padding-bottom: 50px;
   border-bottom: 1px solid hsla(0, 0%, 100%, 0.3);
   position: relative;
+}
+@media (max-width: 767px) {
+  .career-wrapper .job-list__item {
+    padding-bottom: 105px;
+  }
 }
 .career-wrapper .job-list__item:not(:first-child) {
   margin-top: 50px;
@@ -3796,9 +3918,26 @@ footer .footer-main .footer-links__2 .links {
   right: 0;
   top: 0;
 }
+@media (max-width: 767px) {
+  .career-wrapper .job-list__item a {
+    bottom: 30px;
+    left: 0;
+    display: initial;
+    top: auto;
+  }
+}
 .career-wrapper .job-list__item h4 {
   margin-bottom: 30px;
   padding-right: 80px;
+}
+@media (max-width: 767px) {
+  .career-wrapper .job-list__item h4 {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    margin-bottom: 25px;
+    padding-right: 0;
+  }
 }
 .career-wrapper .job-list__item h4 span {
   display: inline-block;
@@ -3811,6 +3950,22 @@ footer .footer-main .footer-links__2 .links {
   border: 1px solid #ffffff;
   border-radius: 50px;
 }
+@media (max-width: 1100px) {
+  .career-wrapper .job-list__item h4 span {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .career-wrapper .job-list__item h4 span {
+    margin-bottom: 25px;
+    margin-left: 0;
+    display: block;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
 .career-wrapper .job-list__item p {
   font-size: 22px;
   font-family: "Nohemi";
@@ -3818,14 +3973,28 @@ footer .footer-main .footer-links__2 .links {
   color: #ffffff;
   margin-bottom: 0;
 }
+@media (max-width: 767px) {
+  .career-wrapper .job-list__item p {
+    font-size: 18px;
+  }
+}
 
 .gallery-wrapper {
   margin: 150px auto 20px auto;
+}
+@media (max-width: 767px) {
+  .gallery-wrapper {
+    margin: 100px auto 20px auto;
+    position: relative;
+    z-index: 2;
+  }
 }
 .gallery-wrapper .gallery-content {
   max-width: 1080px;
   text-align: center;
   margin: 0 auto;
+  position: relative;
+  z-index: 2;
 }
 .gallery-wrapper .gallery-content h3 {
   margin-bottom: 30px;
@@ -3837,6 +4006,12 @@ footer .footer-main .footer-links__2 .links {
   font-family: "Nohemi";
   line-height: 35px;
   color: #ffffff;
+}
+@media (max-width: 767px) {
+  .gallery-wrapper .gallery-content p {
+    font-size: 16px;
+    line-height: 30px;
+  }
 }
 .gallery-wrapper .image-slider-wrapper {
   width: 100vw;
@@ -3865,12 +4040,24 @@ footer .footer-main .footer-links__2 .links {
 .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.large-image {
   width: 420px;
 }
+@media (max-width: 767px) {
+  .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.large-image {
+    width: 277px;
+    height: 211px;
+  }
+}
 .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.large-image img {
   width: 100%;
   height: 320px;
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
+}
+@media (max-width: 767px) {
+  .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.large-image img {
+    width: 277px;
+    height: 211px;
+  }
 }
 .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.grid-4 {
   display: grid;
@@ -3879,12 +4066,25 @@ footer .footer-main .footer-links__2 .links {
   width: 420px;
   gap: 10px;
 }
+@media (max-width: 767px) {
+  .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.grid-4 {
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+}
 .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.grid-4 img {
   width: 100%;
   height: 155px;
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
+}
+@media (max-width: 767px) {
+  .gallery-wrapper .image-slider-wrapper .image-slider .slide-block.grid-4 img {
+    width: 277px;
+    height: 211px;
+  }
 }
 @keyframes scrollX {
   0% {
