--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import "components/brand-guidelines-wrapper";
 @import "components/career";
 @import "components/gallery";
+@import "components/content-wrapper";
 
 
 
