--- a/src/scss/components/_career.scss
+++ b/src/scss/components/_career.scss
@@ -14,6 +14,30 @@
         }
     }
 
+    .career-content{
+        ul{
+            padding-left: 18px;
+            margin-bottom: 0;
+            margin-top: 22px;
+
+            li{
+                font-size: 18px;
+                line-height: 40px;
+                font-weight: 300;
+                font-family: $font;
+                color: $white;
+
+                &:not(:last-child){
+                    margin-bottom: 5px;
+                }
+            }
+        }
+
+        h4{
+            margin-top: 70px;
+        }
+    }
+
     .about-content{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -30,6 +54,24 @@
         h3{
             @media (max-width: 767px) {
                 margin-bottom: 0;
+            }
+        }
+
+        ul{
+            padding-left: 18px;
+            margin-bottom: 0;
+            margin-top: 22px;
+
+            li{
+                font-size: 18px;
+                line-height: 40px;
+                font-weight: 300;
+                font-family: $font;
+                color: $white;
+
+                &:not(:last-child){
+                    margin-bottom: 5px;
+                }
             }
         }
 
