--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,6 +26,11 @@ footer{
             }
         }
 
+        .form-img{
+            margin-top: 55px;
+            max-width: 100%;
+        }
+
         .container{
             @media (max-width:1200px) {
                 max-width: 100%;
@@ -228,6 +233,70 @@ footer{
             .btn-blue{
                 margin-top: 5px;
             }
+
+            .upload-box {
+                border: 1px dashed $white;
+                border-radius: 10px;
+                padding: 20px 35px;
+                width: 100%;
+                text-align: center;
+                background-color: #2c2c2c;
+                transition: border-color 0.3s ease;
+                cursor: pointer;
+                margin: 20px 0 25px 0;
+
+                &.dragover {
+                    border-color: #0057ff;
+                }
+
+                .icon {
+                    margin-bottom: 10px;
+                }
+
+                    p {
+                        font-size: 12px;
+                        font-weight: 300;
+                        font-family: $font;
+                        color: $white;
+                        line-height: 20px;
+                        text-align: center;
+                        margin-top: 10px;
+                        margin-bottom: 0;
+                        opacity: 1;
+                    }
+                }
+
+                .choose-btn {
+                background-color: $blue;
+                color: $white;
+                margin-top: 20px;
+                padding: 10px 20px;
+                font-size: 12px;
+                font-weight: 300;
+                font-family: $font;
+                border-radius: 50px;
+                outline: none;
+                border: 0;
+
+
+                    &:hover {
+                        background-color: $blue;
+                    }
+                }
+
+                input[type="file"] {
+                    display: none;
+                  }
+              
+                  #file-name {
+                    color: $white;
+                    font-size: 13px;
+                    opacity: .6;
+                    font-family: $font;
+                    font-weight: 300;
+                    margin-top: 10px;
+                  }
+
         }
     
         .marquee-container {
