--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -458,6 +458,10 @@ footer .footer-contact h3 {
     margin: 40px 0 70px 0;
   }
 }
+footer .footer-contact .form-img {
+  margin-top: 55px;
+  max-width: 100%;
+}
 @media (max-width: 1200px) {
   footer .footer-contact .container {
     max-width: 100%;
@@ -658,6 +662,60 @@ footer .footer-contact__form textarea.form-control {
 }
 footer .footer-contact__form .btn-blue {
   margin-top: 5px;
+}
+footer .footer-contact__form .upload-box {
+  border: 1px dashed #ffffff;
+  border-radius: 10px;
+  padding: 20px 35px;
+  width: 100%;
+  text-align: center;
+  background-color: #2c2c2c;
+  transition: border-color 0.3s ease;
+  cursor: pointer;
+  margin: 20px 0 25px 0;
+}
+footer .footer-contact__form .upload-box.dragover {
+  border-color: #0057ff;
+}
+footer .footer-contact__form .upload-box .icon {
+  margin-bottom: 10px;
+}
+footer .footer-contact__form .upload-box p {
+  font-size: 12px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  color: #ffffff;
+  line-height: 20px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 0;
+  opacity: 1;
+}
+footer .footer-contact__form .choose-btn {
+  background-color: #0033FF;
+  color: #ffffff;
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 12px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  border-radius: 50px;
+  outline: none;
+  border: 0;
+}
+footer .footer-contact__form .choose-btn:hover {
+  background-color: #0033FF;
+}
+footer .footer-contact__form input[type=file] {
+  display: none;
+}
+footer .footer-contact__form #file-name {
+  color: #ffffff;
+  font-size: 13px;
+  opacity: 0.6;
+  font-family: "Nohemi";
+  font-weight: 300;
+  margin-top: 10px;
 }
 footer .footer-contact .marquee-container {
   width: 100%;
@@ -1621,6 +1679,40 @@ footer .footer-main .footer-links__2 .links {
     text-align: center;
     margin-top: 30px;
   }
+}
+.hero-wrapper.version-1 .d-flex {
+  gap: 30px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: end;
+}
+.hero-wrapper.version-1 .d-flex .col-1 {
+  width: 70%;
+  text-align: left;
+}
+.hero-wrapper.version-1 .d-flex .col-1 a {
+  font-size: 22px;
+  font-weight: 600;
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 42px;
+}
+.hero-wrapper.version-1 .d-flex .col-1 a img {
+  margin-right: 15px;
+}
+.hero-wrapper.version-1 .d-flex .col-1 .disc {
+  font-size: 25px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  color: #ffffff;
+  margin-top: 25px;
+}
+.hero-wrapper.version-1 .d-flex .col-2 {
+  width: 20%;
+  text-align: right;
+  justify-content: end;
+  display: flex;
 }
 .hero-wrapper.version-1.w-full {
   padding-bottom: 250px;
@@ -3789,6 +3881,24 @@ footer .footer-main .footer-links__2 .links {
     overflow-x: hidden;
   }
 }
+.career-wrapper .career-content ul {
+  padding-left: 18px;
+  margin-bottom: 0;
+  margin-top: 22px;
+}
+.career-wrapper .career-content ul li {
+  font-size: 18px;
+  line-height: 40px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  color: #ffffff;
+}
+.career-wrapper .career-content ul li:not(:last-child) {
+  margin-bottom: 5px;
+}
+.career-wrapper .career-content h4 {
+  margin-top: 70px;
+}
 .career-wrapper .about-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -3808,6 +3918,21 @@ footer .footer-main .footer-links__2 .links {
   .career-wrapper .about-content h3 {
     margin-bottom: 0;
   }
+}
+.career-wrapper .about-content ul {
+  padding-left: 18px;
+  margin-bottom: 0;
+  margin-top: 22px;
+}
+.career-wrapper .about-content ul li {
+  font-size: 18px;
+  line-height: 40px;
+  font-weight: 300;
+  font-family: "Nohemi";
+  color: #ffffff;
+}
+.career-wrapper .about-content ul li:not(:last-child) {
+  margin-bottom: 5px;
 }
 .career-wrapper .about-content p {
   font-size: 18px;
