--- a/src/scss/components/_career.scss
+++ b/src/scss/components/_career.scss
@@ -11,6 +11,8 @@
 
         @media (max-width: 767px) {
             overflow-x: hidden;
+            z-index: 3;
+            margin-top: -130px;
         }
     }
 
@@ -19,6 +21,10 @@
             padding-left: 18px;
             margin-bottom: 0;
             margin-top: 22px;
+
+            @media (max-width: 767px) {
+                margin-top: 40px;
+            }
 
             li{
                 font-size: 18px;
@@ -30,11 +36,21 @@
                 &:not(:last-child){
                     margin-bottom: 5px;
                 }
+
+                @media (max-width: 767px) {
+                    font-size: 16px;
+                    line-height: 35px;
+                }
             }
         }
 
         h4{
             margin-top: 70px;
+
+            @media (max-width: 767px) {
+                font-size: 35px;
+                line-height: 45px;
+            }
         }
     }
 
