--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -326,6 +326,10 @@
                 width: 70%;
                 text-align: left;
 
+                @media (max-width: 991px) {
+                    width: 100%;
+                }
+
                 a{
                     font-size: 22px;
                     font-weight: 600;
@@ -334,8 +338,21 @@
                     display: block;
                     margin-bottom: 42px;
 
+                    @media (max-width: 991px) {
+                        margin-bottom: 30px;
+                    }
+
                     img{
                         margin-right: 15px;
+
+                        @media (max-width: 991px) {
+                            height: 15px;
+                        }
+                    }
+
+                    @media (max-width: 991px) {
+                        font-size: 16px;
+                        font-weight: 500;
                     }
                 }
 
@@ -345,6 +362,11 @@
                     font-family: $font;
                     color: $white;
                     margin-top: 25px;
+
+                    @media (max-width: 991px) {
+                        margin-top: 20px;
+                        font-size: 18px;
+                    }
                 }
             }
 
@@ -353,6 +375,11 @@
                 text-align: right;
                 justify-content: end;
                 display: flex;
+
+                @media (max-width: 991px) {
+                    width: 0;
+                    display: none;
+                }
             }
         }
 
@@ -415,11 +442,21 @@
                 p{
                     margin-bottom: 0;
                 }
+
+                .d-flex{
+                    .title_2{
+                        text-align: left;
+                    }
+                }
             }
 
             @media (max-width: 1200px) {
                 max-width: 95%;
                 margin: 0 auto;
+            }
+
+            @media (max-width: 991px) {
+                max-width: 100%;
             }
 
             .title_2{
@@ -447,6 +484,24 @@
                 @media (max-width: 767px) {
                     -webkit-line-clamp: 6;
                     max-width: 100%;
+                }
+            }
+
+            
+
+            &.content-width{
+                max-width: 1200px;
+
+                h1{
+                    max-width: 63%;
+                }
+
+                p, a{
+                    max-width: 55%;
+                }
+
+                a{
+                    margin-top: 30px;
                 }
             }
         }
