--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -271,7 +271,7 @@
         }
     } 
 
-    &.version-1{
+    &.version-1, &.version-2{
         padding: 10px;
 
         @media (max-width: 767px) {
@@ -391,6 +391,10 @@
         @media (max-width: 991px) {
             padding-bottom: 170px;
         }
+
+        @media (max-width: 600px) {
+            padding-bottom: 130px;
+        }
     }
 
         .hero-wrapper__content{
@@ -470,7 +474,7 @@
                 @media (max-width: 767px) {
                     font-size: 40px;
                     line-height: 50px;
-                    -webkit-line-clamp: 6;
+                    -webkit-line-clamp: 5;
                 }
             }
 
@@ -482,7 +486,7 @@
                 max-width: 80%;
 
                 @media (max-width: 767px) {
-                    -webkit-line-clamp: 6;
+                    -webkit-line-clamp: 5;
                     max-width: 100%;
                 }
             }
@@ -492,16 +496,45 @@
             &.content-width{
                 max-width: 1200px;
 
+                @media (max-width: 992px) {
+                    min-height: 500px;
+                }
+
+                @media (max-width: 767px) {
+                    min-height: 595px;
+                    padding: 25px 20px;
+                }
+
                 h1{
+                    text-align: left;
                     max-width: 63%;
+
+                    @media (max-width: 991px) {
+                        max-width: 100%;
+                    }
+                }
+
+                p{
+                    @media (max-width: 767px) {
+                        margin-top: 25px;
+                    } 
                 }
 
                 p, a{
                     max-width: 55%;
+                    text-align: left;
+
+                    @media (max-width: 991px) {
+                        max-width: 100%;
+                    }
                 }
 
                 a{
                     margin-top: 30px;
+
+                    @media (max-width: 767px) {
+                        margin-top: 15px;
+                    } 
                 }
             }
         }
@@ -534,6 +567,27 @@
                 margin: 40px 0;
             }
         }
+    }
+
+    &.version-2{
+      .hero-wrapper__bg{
+        @media (max-width: 991px) {
+            min-height: 500px;
+            background-position: right top !important;
+        }
+
+        @media (max-width: 767px) {
+            min-height: 595px;
+            background-position: 0px -95px !important;;
+            
+        }
+
+        @media (max-width: 600px) {
+            min-height: 595px;
+            background-position: top center !important;;
+            
+        }
+      }  
     }
 
 }
