--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -2,6 +2,7 @@
     .container{
         max-width: 1200px;
         margin: 0 auto;
+        width: calc(100% - 30px);
     }
 
     &.top-gap{
@@ -23,6 +24,12 @@
         font-weight: 200;
         color: $white;
         font-family: $font;
+
+        @media (max-width: 767px) {
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 300;
+        }
     }
 
     h3{
@@ -62,6 +69,16 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
 
+        @media (max-width: 991px) {
+            margin: 70px auto;
+            gap: 15px;
+        }
+
+        @media (max-width: 600px) {
+            display: block;
+            margin: 30px auto 100px auto;
+        }
+
         > :nth-last-child(1):nth-child(odd){
             grid-column: span 2;
         }
@@ -72,6 +89,17 @@
             padding: 35px;
             height: 100%;
 
+            @media (max-width: 991px) {
+                padding: 20px;
+                border-radius: 20px;
+            }
+
+            @media (max-width: 600px) {
+                &:not(:first-child){
+                    margin-top: 20px;
+                }
+            }
+
             h3, p{
                 color: $black;
             }
@@ -79,6 +107,11 @@
             h3{
                 margin-bottom: 40px;
                 max-width: 60%;
+
+                @media (max-width: 991px) {
+                    margin-bottom: 20px;
+                    max-width: 100%;
+                }
             }
 
             p{
@@ -86,10 +119,19 @@
                 line-height: 35px;
                 font-weight: 300;
                 font-family: $font;
+
+                @media (max-width: 767px) {
+                    font-size: 14px;
+                    line-height: 25px;
+                }
             }
 
             .btn{
                 margin-top: 30px;
+
+                @media (max-width: 767px) {
+                    margin-top: 20px;
+                }
             }
 
             &.bg-blue{
@@ -113,19 +155,50 @@
     .box-items-2{
         margin: 100px auto;
 
+        @media (max-width: 991px) {
+            margin: 70px auto;
+        }
+
         h3{
             margin-bottom: 50px;
+
+            @media (max-width: 767px) {
+                margin-bottom: 30px;
+            }
         }
 
         .d-grid{
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
 
+            @media (max-width: 991px) {
+                gap: 15px;
+            }
+
+            @media (max-width: 767px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @media (max-width: 600px) {
+                display: block !important;
+            }
+
             .item{
                 border-radius: 30px;
                 position: relative;
                 padding: 35px;
                 height: 100%;
+
+                @media (max-width: 991px) {
+                    padding: 25px;
+                    border-radius: 20px;
+                }
+
+                @media (max-width: 600px) {
+                    &:not(:first-child){
+                        margin-top: 20px;
+                    }
+                }
 
                 &::before {
                     content: "";
@@ -162,6 +235,12 @@
                     font-weight: 300;
                     margin-top: 30px;
                     margin-bottom: 0;
+
+                    @media (max-width: 767px) {
+                        font-size: 14px;
+                        line-height: 25px;
+                        margin-top: 25px;
+                    }
                   }
             }
         }
@@ -172,12 +251,37 @@
         background-position: top !important;
         margin: 100px auto;
 
+        @media (max-width: 1400px) {
+            background-position: top right !important;
+        }
+
+        @media (max-width: 991px) {
+            min-height: 500px;
+            margin: 70px auto;
+        }
+
         .container{
             min-height: inherit;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
             padding: 50px 0;
+
+            @media (max-width: 991px) {
+                padding: 20px 0;
+            }
+
+            h3{
+                margin-bottom: 30px;
+
+                @media (max-width: 991px) {
+                    margin-bottom: 25px;
+                }
+            }
+
+            p{
+                margin-bottom: 15px;
+            }
         }
     }
 
@@ -186,32 +290,62 @@
         width: 100%;
         position: relative;
 
+        @media (max-width: 991px) {
+            margin: 70px auto 10px auto;
+        }
+
         &__bgsvg{
             position: absolute;
-            top: -115%;
+            top: -125%;
             right: 0;
             z-index: -1;
+
+            @media (max-width: 991px) {
+                display: none;
+            }
         }
 
         h3{
             max-width: 80%;
+
+            @media (max-width: 991px) {
+                max-width: 100%;
+            }
         }
 
         .points-list{
             margin-top: 100px;
             max-width: 65%;
 
+            @media (max-width: 991px) {
+                max-width: 100%;
+                margin-top: 50px;
+            }
+
             .point{
                 display: flex;
                 gap: 20px;
 
+                @media (max-width: 991px) {
+                    gap: 10px;
+                }
+
                 &:not(:first-child){
                     margin-top: 70px;
+
+                    @media (max-width: 991px) {
+                        margin-top: 40px;
+                    }
                 }
 
                 img{
                     width: 30px;
                     height: 30px;
+
+                    @media (max-width: 991px) {
+                        width: 20px;
+                        height: 20px;
+                    }
                 }
 
                 p, .title{
@@ -223,12 +357,23 @@
                     font-weight: 600;
                     font-size: 30px;
                     line-height: 40px;
+
+                    @media (max-width: 991px) {
+                        font-weight: 500;
+                        font-size: 22px;
+                        line-height: 30px;
+                    }
                 }
 
                 p{
                     margin-top: 20px;
                     font-size: 16px;
                     line-height: 30px;
+                    margin-bottom: 0;
+
+                    @media (max-width: 991px) {
+                        margin-top: 22px;
+                    }
                 }
             }
         }
