--- a/src/scss/components/_technologies-listing.scss
+++ b/src/scss/components/_technologies-listing.scss
@@ -4,7 +4,8 @@
         padding-bottom: 20px;
 
         @media (max-width:1200px) {
-            margin: 80px auto;
+            margin: 70px auto;
+            padding-bottom: 0;
           }
     }
 
@@ -18,6 +19,7 @@
         @media (max-width:767px) {
             grid-template-columns: repeat(2, 1fr);
             margin: 50px auto 0;
+            gap: 15px;
         }
 
         @media (max-width:576px) {
