--- a/src/scss/components/_blog-category-wrappper.scss
+++ b/src/scss/components/_blog-category-wrappper.scss
@@ -57,6 +57,7 @@
     
         @media (max-width:991px) {
             gap: 15px;
+            margin: 50px auto 70px auto;
         }
     
         @media (max-width:767px) {
