--- a/src/scss/components/_variables-&-common.scss
+++ b/src/scss/components/_variables-&-common.scss
@@ -7,6 +7,7 @@ $black_4: #353535;
 $black_5: #3A3A3A;
 $black_6: #2E2E2E;
 $black_7: #232323;
+$black_8:#2B2B2B;
 $blue: #0033FF;
 $fbbg:#0766FF;
 $linkdinbg:#0066C8;
