--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -62,7 +62,9 @@
             }
         }
     }
+}
 
+.service-detail-wrapper, .services-content-wrapper{
     .box-items.grid-1{
         margin: 100px auto;
         display: grid;
@@ -152,6 +154,76 @@
         }
     }
 
+    .box-items.version-2{
+        margin: 70px auto 100px auto;
+
+        .grid-2{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
+    
+            @media (max-width: 991px) {
+                gap: 15px;
+            }
+    
+            @media (max-width: 600px) {
+                display: block;
+                margin: 30px auto 100px auto;
+            }
+    
+            .item{
+                background-color: $white;
+                border-radius: 30px;
+                padding: 30px;
+                height: 100%;
+    
+                @media (max-width: 991px) {
+                    padding: 20px;
+                    border-radius: 20px;
+                }
+    
+                @media (max-width: 600px) {
+                    &:not(:first-child){
+                        margin-top: 20px;
+                    }
+                }
+    
+                h4, p{
+                    color: $black;
+                }
+    
+                h4{
+                    margin-bottom: 30px;
+                    max-width: 100%;
+    
+                    @media (max-width: 991px) {
+                        margin-bottom: 20px;
+                        max-width: 100%;
+                    }
+                }
+    
+                p{
+                    font-size: 18px;
+                    line-height: 35px;
+                    font-weight: 300;
+                    font-family: $font;
+                    margin-bottom: 0;
+    
+                    @media (max-width: 767px) {
+                        font-size: 14px;
+                        line-height: 25px;
+                    }
+                }
+            }
+        }
+
+        
+    
+        .btn-blue{
+            margin: 50px auto 0 auto;
+        }
+    }
+
     .box-items-2{
         margin: 100px auto;
 
@@ -211,25 +283,25 @@
                     background: linear-gradient(198.33deg, #0033FF 12.44%, #FFFFFF 91.58%);
                     border-radius: 30px;
                     -webkit-mask: 
-                      linear-gradient(#fff 0 0) content-box, 
-                      linear-gradient(#fff 0 0);
+                    linear-gradient(#fff 0 0) content-box, 
+                    linear-gradient(#fff 0 0);
                     -webkit-mask-composite: xor;
                     mask-composite: exclude;
                     z-index: -1;
-                  }
+                }
 
-                  p, .title{
+                p, .title{
                     color: $white;
                     font-family: $font;
-                  }
+                }
 
-                  .title{
+                .title{
                     font-size: 30px;
                     line-height: 40px;
                     font-weight: 300;
-                  }
+                }
 
-                  p{
+                p{
                     font-size: 16px;
                     line-height: 30px;
                     font-weight: 300;
@@ -241,7 +313,7 @@
                         line-height: 25px;
                         margin-top: 25px;
                     }
-                  }
+                }
             }
         }
     }
@@ -378,4 +450,291 @@
             }
         }
     }
+}    
+
+.services-content-wrapper{
+    .container{
+        max-width: 1200px;
+        margin: 0 auto;
+        width: calc(100% - 30px);
+    }
+
+    &.top-gap{
+        margin-top: -170px;
+
+        @media (max-width:991px) {
+            margin-top: -90px;
+        }
+
+        @media (max-width:767px) {
+            position: relative;
+            z-index: 6;
+        }
+    }
+
+    p{
+        font-size: 18px;
+        line-height: 35px;
+        font-weight: 200;
+        color: $white;
+        font-family: $font;
+    }
+
+    h3{
+        margin-bottom: 0;
+    }
+
+
+    .about-content{
+        display: flex;
+        gap: 22px;
+
+        @media (max-width:767px) {
+            flex-direction: column;
+            gap: 40px;
+        }
+
+        h3{
+            width: 60%;
+
+            @media (max-width:767px) {
+                width: 100%;
+            }
+        }
+
+        p{
+            width: 40%;
+            margin-bottom: 0;
+
+            @media (max-width:767px) {
+                width: 100%;
+            }
+        }
+    }
+
+    .resources-wrapper{
+        position: relative;
+        margin: 200px auto;
+
+        &__bgsvg{
+            position: absolute;
+            right: 0;
+            top: -140%;
+            z-index: -1;
+
+            @media (max-width:991px) {
+                display: none;
+            }
+        }
+
+        &-row{
+            display: flex;
+            gap: 70px;
+
+            &__content{
+                width: 60%;
+
+                h3{
+                    margin-bottom: 30px;
+                }
+
+                p{
+                    margin-bottom: 0;
+                }
+
+                .points-list{
+                    display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                        gap: 40px 100px;
+                        margin-top: 60px;
+                        grid-auto-flow: dense; 
+            
+                        @media (max-width:767px) {
+                            display: block;
+                            margin-top: 40px;
+                            gap: 30px;
+                        }
+            
+                        p{
+                            margin-bottom: 0;
+                            position: relative;
+                            padding-left: 40px;
+                            font-size: 22px;
+                            line-height: 25px;
+            
+                            @media (max-width:767px) {
+                                font-size: 18px;
+            
+                                &:not(:first-child){
+                                    margin-top: 30px;
+                                }
+                            }
+            
+                            img{
+                                height: 25px;
+                                width: 25px;
+                                left: 0;
+                                position: absolute;
+                            }
+                        }
+                }
+            }
+
+            &__img{
+                width: 40%;
+            }
+        }
+    }
+
+    .content-small-wrapper{
+        position: relative;
+        margin: 200px auto;
+
+        &__bgsvg{
+            position: absolute;
+            top: -55%;
+            z-index: -1;
+
+            @media (max-width:991px) {
+                display: none;
+            }
+        }
+
+        &-row{
+            display: flex;
+            gap: 80px;
+
+            &__title{
+                width: 50%;
+
+                .btn-blue{
+                    margin-top: 40px;
+                }
+            }
+
+            &__content{
+                width: 50%;
+            }
+        }
+    }
+
+    .development-process-wrapper{
+        margin: 200px auto 150px auto;
+
+        .d-flex{
+            gap: 40px;
+
+            .col-1{
+
+            }
+
+            .col-2{
+                width: 50%;
+            }
+        }
+
+        &__steps{
+            margin-top: 70px;
+            position: relative;
+
+            .step{
+                font-size: 22px;
+                color: $white;
+                font-family: $font;
+                font-weight: 300;
+                line-height: 32px;
+                padding: 5px;
+                height: 68px;
+                width: 300px;
+                border-radius: 15px;
+                background-color: $blue;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                white-space: nowrap;
+                border: 1px solid $blue;
+                cursor: pointer;
+
+                &:not(:first-child){
+                    margin-top: 25px;
+                }
+
+                &.step-active{
+                    background-color: $black_1;
+                    transition: all .3s;
+                }
+
+                &:hover{
+                    background-color: $blue;
+                }
+
+                &:nth-child(6){
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        bottom: 0;
+                        right: 150px;
+                        width: 1px;
+                        height: 100%;
+                        background: repeating-linear-gradient(
+                          to bottom,
+                          $black_8 0,
+                          $black_8 5px,
+                          transparent 5px,
+                          transparent 15px,
+                        );
+                        z-index: -1;
+                      }
+                }
+
+                &:last-child{
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        bottom: 0;
+                        right: 0;
+                        width: 1px;
+                        height: 100%;
+                        background: repeating-linear-gradient(
+                          to bottom,
+                          $black_8 0,
+                          $black_8 5px,
+                          transparent 5px,
+                          transparent 15px
+                        );
+                        z-index:-1;
+                      }
+                }
+            }
+
+            @for $i from 1 through 7 {
+                .step:nth-child(#{$i}) {
+                  margin-left: calc(150px * #{$i - 1});
+              
+                  &:before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: calc(150px * #{$i - 1});
+                    width: 1px;
+                    height: 100%;
+                    background: repeating-linear-gradient(
+                      to bottom,
+                      $black_8 0,
+                      $black_8 5px,
+                      transparent 5px,
+                      transparent 15px
+                    );
+                    z-index: -1;
+                  }
+                }
+              }
+              
+        }
+    }
 }
+
